fix: 增加tailwind.config的gray100 增加tailwind.config的letterSpacing 0.1rem 增加main.css的HTML APPLY 文字間距以及字體 移除header.ejs的border-b改成由每個頁面設定。 移除index.html的字體設定改成用apply全站設定。 增加index.html的border-t。
feat:
新增signin.html手機板，尚未完成PC版。

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,6 +3,12 @@
 @tailwind utilities;
 
 @layer base {
+
+  html {
+    @apply tracking-wide10;
+    @apply font-serif;
+  }
+  
   body {
     @apply leading-normal; /* leading-normal 預設為 1.5 */
   }
